# pdfa-learning

./: .gitignore  404.html  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: lint.yml  test.yml
docs/: index.md
docs/notebooks/: 01-pdfa.ipynb  02-pdfa-learning-palmer.ipynb  02-pdfa-learning.ipynb  03-pdfa-learning-balle.ipynb  helpers.py
notebooks/: 01-pdfa.ipynb  02-pdfa-learning.ipynb
notebooks/01-pdfa/: index.html
notebooks/02-pdfa-learning-palmer/: index.html
notebooks/03-pdfa-learning-balle/: index.html
scripts/: check_copyright.py  whitelist.py
search/: search_index.json
src/learn_pdfa/: __init__.py  base.py  common.py  learn_probabilities.py  learn_subgraph.py
src/pdfa/: __init__.py  base.py  helpers.py  render.py  types.py
src/pdfa_learning/: __init__.py  types.py
src/pdfa_learning/helpers/: __init__.py  base.py
src/pdfa_learning/learn_pdfa/: __init__.py  base.py  common.py  learn_probabilities.py  learn_subgraph.py
src/pdfa_learning/learn_pdfa/balle/: __init__.py  core.py  params.py
src/pdfa_learning/learn_pdfa/palmer/: __init__.py  core.py  learn_probabilities.py  learn_subgraph.py  params.py
src/pdfa_learning/learn_pdfa/utils/: __init__.py  base.py  generator.py
src/pdfa_learning/learn_pdfa/utils/multiset/: __init__.py  base.py  naive.py  tree.py
src/pdfa_learning/pdfa/: __init__.py  base.py  helpers.py  render.py
tests/: __init__.py  conftest.py  fixtures.py  pdfas.py  test_generator.py  test_learn_pdfa.py  test_multiset.py  test_pdfa.py
tests/test_learn_pdfa/: __init__.py  base.py  test_balle.py  test_palmer.py
