[tool.poetry]
name = "pdfa-learning"
version = "0.1.0"
description = "A Python project template."
authors = ["MarcoFavorito <marco.favorito@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://marcofavorito.me/pdfa-learning"
repository = "https://github.com/marcofavorito/pdfa-learning.git"
documentation = "https://marcofavorito.me/pdfa-learning"
keywords = [
    "probabilistic finite automata",
    "PDFA",
    "learning probabilistic finite automata",
    "probably approximately correct learning",
    "PAC-learning of PDFA",
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
#packages = []
include = []

#[tool.poetry.scripts]
#script_name = 'path/to/script'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/marcofavorito/pdfa-learning/issues"
"Pull Requests" = "https://github.com/marcofavorito/pdfa-learning/pulls"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
graphviz = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
tox = "^3.19.0"
codecov = "^2.1.9"
black = "==20.8b1"
mypy = "^0.782"
isort = "^5.4.2"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.1.4"
flake8-eradicate = "^0.4.0"
flake8-isort = "^4.0.0"
pylint = "^2.6.0"
safety = "^1.9.0"
vulture = "^2.1"
bandit = "^1.6.2"
mkdocs = "^1.1.2"
markdown_include = "^0.6.0"
mkdocs-material = "^5.5.11"
ipython = "^7.18.1"
jupyter = "^1.0.0"
markdown = "3.2.2"
matplotlib = "^3.3.3"
jupyterlab = "^3.0.0"
notebook = "^6.1.6"
pygments = "^2.7.3"
mknotebooks = "0.5.0"
twine = "^3.3.0"
hypothesis = "^5.43.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
